<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="24dp"
    android:background="?attr/colorSurfaceVariant">

    <TextView
        android:id="@+id/welcomeBanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="48sp"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:paddingTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username:"
        android:textSize="20sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeBanner"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@id/welcomeBanner"
        app:layout_constraintStart_toEndOf="@id/usernameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart ="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password:"
        android:textSize="20sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/usernameTextView"
        app:layout_constraintEnd_toEndOf="@id/usernameTextView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        app:layout_constraintTop_toBottomOf="@id/usernameTextView"
        app:layout_constraintStart_toEndOf="@id/usernameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart ="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/nicknameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nickname:"
        android:textSize="20sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/passwordTextView"
        app:layout_constraintEnd_toEndOf="@id/usernameTextView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nicknameLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        app:layout_constraintTop_toBottomOf="@id/passwordTextView"
        app:layout_constraintStart_toEndOf="@id/usernameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart ="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nicknameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email:"
        android:textSize="20sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/nicknameTextView"
        app:layout_constraintEnd_toEndOf="@id/usernameTextView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_email"
        app:layout_constraintTop_toBottomOf="@id/nicknameTextView"
        app:layout_constraintStart_toEndOf="@id/usernameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart ="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/goalWeightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Goal Weight:"
        android:textSize="20sp"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintTop_toTopOf="@id/emailLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goalWeightLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="80dp"
        android:hint="000.0"
        app:layout_constraintTop_toTopOf="@id/emailLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.28"
        app:layout_constraintStart_toEndOf="@id/goalWeightTextView"
        android:layout_marginStart ="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputGoalWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="6" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/goalDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Goal Date:"
        android:textSize="20sp"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/goalWeightLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        android:layout_marginTop="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goalDateLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:hint="MM/DD/YYYY"
        app:layout_constraintTop_toTopOf="@id/goalDateTextView"
        app:layout_constraintBottom_toBottomOf="@id/goalDateTextView"
        app:layout_constraintStart_toEndOf="@id/goalDateTextView"
        android:layout_marginStart ="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/goalDateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        app:layout_constraintTop_toBottomOf="@id/goalDateLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />



</androidx.constraintlayout.widget.ConstraintLayout>